Fix section content overlapping with each other

--- a/src/App.css
+++ b/src/App.css
@@ -64,7 +64,7 @@ h3 {
 
 .home > section {
     position: relative;
-    height: 100vh;
+    min-height: 100vh;
     padding: 0 2.5%;
     margin: 0 auto;
     box-sizing: border-box;
